# VISION-AIR

./: .gitattributes  .gitignore  BL)  README.md  calibration.py  main.py  pyproject.toml  requirements.txt  run_vision_air.bat  tracking_engine.py
docs/: ARCHITECTURE.md  CALIBRATION_GUIDE.md
src/vision_air/: main.py
src/vision_air.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vision_air/core/: calibration.py  collision_detector.py  front_engine.py  keyboard_layout.py  tracking.py
src/vision_air/input/: controller.py
src/vision_air/ui/: overlay.py
src/vision_air/utils/: config.py  downloader.py  filters.py
